--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,12 @@ install:
   - sudo apt-get install -y gcc-5 g++-5
   - sudo apt-get install -y cmake
   - sudo apt-get install -y autoconf automake libtool make unzip
-  - sudo apt-get install -y libgtest-dev
   - sudo apt-get install -y python python-scapy libpcap-dev
   - sudo apt-get install -y libgraph-easy-perl linux-headers-$(uname -r)
-  - .travis/install-glog.sh
-  - .travis/install-gflags.sh
-  - .travis/install-grpc.sh
+  - sudo apt-get install -y libgtest-dev
+  - sudo apt-get install -y libgflags-dev
+  - sudo apt-get install -y libgoogle-glog-dev
+  - sudo apt-get install -y libgrpc-dev
 
 script:
   - ./build.py
