--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,15 @@ install:
   - sudo add-apt-repository -y 'deb http://us.archive.ubuntu.com/ubuntu yakkety main universe'
   - sudo apt-get update
   - sudo apt-get install -y g++-4.7
-  - sudo apt-get install -y g++-5
+  - sudo apt-get install -y -t yakkety g++-5
   - sudo apt-get install -y cmake
   - sudo apt-get install -y autoconf automake libtool make unzip
   - sudo apt-get install -y python python-scapy libpcap-dev
   - sudo apt-get install -y libgraph-easy-perl linux-headers-$(uname -r)
-  - sudo apt-get install -y libgtest-dev
-  - sudo apt-get install -y libgoogle-glog-dev
-  - sudo apt-get install -y protobuf-compiler
-  - sudo apt-get install -y libgrpc-dev
+  - sudo apt-get install -y -t yakkety libgtest-dev
+  - sudo apt-get install -y -t yakkety libgoogle-glog-dev
+  - sudo apt-get install -y -t yakkety protobuf-compiler
+  - sudo apt-get install -y -t yakkety libgrpc-dev
 
 script:
   - ./build.py
