--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ install:
   - sudo apt-get install -y python python-scapy libpcap-dev
   - sudo apt-get install -y libgraph-easy-perl linux-headers-$(uname -r)
   - sudo apt-get install -y -t yakkety libgtest-dev
+  - sudo apt-get install -y -t yakkety libgflags-dev
+  - sudo apt-get install -y -t yakkety libgoogle-glog0v5
   - sudo apt-get install -y -t yakkety libgoogle-glog-dev
   - sudo apt-get install -y -t yakkety protobuf-compiler
   - sudo apt-get install -y -t yakkety libgrpc-dev
