--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 
 install:
   - sudo add-apt-repository -y 'deb http://us.archive.ubuntu.com/ubuntu yakkety main universe'
-  - sudo apt-get update
+  - sudo apt-get update -q
   - sudo apt-get install -y g++-4.7
   - sudo apt-get install -y -t yakkety g++-5
   - sudo apt-get install -y cmake
@@ -32,8 +32,6 @@ install:
   - sudo apt-get install -y -t yakkety libgoogle-glog-dev
   - sudo apt-get install -y -t yakkety protobuf-compiler
   - sudo apt-get install -y -t yakkety libprotoc-dev
-  - sudo apt-get install -y -t yakkety libgrpc0
-  - sudo apt-get install -y -t yakkety libgrpc-dev
   - .travis/install-grpc.sh
 
 script:
